# edgeAI-mqtt-broker

./: README.md  cleaned_dataset_4500.csv  cleaned_dataset_45000.csv  cleaned_dataset_900.csv  connect_broker.py  create_sample.py  publish.py  setup_tensorflow.sh  subscribe.py  training.py  unsub.py
broker/: CMakeLists.txt  prj.conf
broker/boards/: esp32s3_devkitc_procpu.conf
broker/src/: broker.c  broker.h  client.c  client.h  connect.c  connect.h  features.c  features.h  main.c  message.c  message.h  publish.c  publish.h  subscribe.c  subscribe.h  wifi.c  wifi.h
broker/src/model/: main_functions.cpp  main_functions.h  model.cpp  model.hpp  model_data_1000_f.h  model_data_1000_i.h  model_data_2000_f.h  model_data_2000_i.h  model_data_6000_f.h  model_data_6000_i.h
